--- a/.github/workflows/zhu.yml
+++ b/.github/workflows/zhu.yml
@@ -13,9 +13,8 @@ jobs:
       - name: 登录dockerHUb
         uses: docker/login-action@v3
         with:
-          username: ${{DOCKER_HUB_USER}}
-          passowrd: ${{DOCKER_HUB_PASSWORD}}
-
+          username: zhuhaohao
+          passowrd: dckr_pat_Mrx1osCOXmOHSMuJ9kCCWwZ-G2Q
        
       - name: 构建并推动到docker hub
         uses: docker/build-push-action@v5
