--- a/.github/workflows/zhu.yml
+++ b/.github/workflows/zhu.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: zhuhaohao
-          passowrd: dckr_pat_Mrx1osCOXmOHSMuJ9kCCWwZ-G2Q
+          password: dckr_pat_Mrx1osCOXmOHSMuJ9kCCWwZ-G2Q
        
       - name: 构建并推动到docker hub
         uses: docker/build-push-action@v5
